--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
-    "ghost": "0.11.1",
-    "sqlite3": "^3.1.4"
+    "ghost": "0.11.2"
   },
   "author": "amio",
   "license": "ISC"
